--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,12 +23,12 @@ a img {
 }
 
 a:link {
-    color: #42413C;
+    color: #3D5872;
     text-decoration: underline;
 }
 
 a:visited {
-    color: #6E6C64;
+    color: #344657;
     text-decoration: underline;
 }
 
@@ -66,7 +66,7 @@ header a:link {
     width: 180px;
     height: 100%;
     padding-bottom: 10px;
-    position: fixed;
+    /*position: fixed;*/
 }
 
 .sidebar1 #userLoggedInfo {
@@ -89,7 +89,6 @@ header a:link {
 
 .content {
     background-color: #FFFFFF;
-    float: left;
     margin: 10px 10px 10px 175px;
     border: 1px solid #344657;
 }
