--- a/CSS/style.css
+++ b/CSS/style.css
@@ -77,11 +77,11 @@ form {
     display: block;
 }
 
-table.pPage {
+table.pPage, table.rPage {
     margin-left: 15px;
 }
 
-table.pPage td {
+table.pPage td,table.rPage td {
     text-align: center;
     padding: 0 15px;
 }
